# pli_view

./: CMakeLists.txt  license.txt  load_modules.sh  readme.md
cmake/: FindOSPRay.cmake  FindTBB.cmake  _dependencies.cmake  _sources.cmake  assign_source_group.cmake
docs/: linux_notes.txt  presets.json  test_presets.json
include/: viewer.hpp  window.hpp  window.ui
include/adapters/: fom_poly_data.hpp  vector_rgb_mapper.hpp
include/adapters/spdlog/: qt_text_browser_sink.hpp
include/adapters/vtk/: fom_factory.hpp
include/aspects/: loggable.hpp
include/attributes/: loggable.hpp  renderable.hpp
include/cuda/: convert.h  decorators.h  launch.h  odf_field.h  orthtree.h  sample.h  sampler.h  spherical_histogram.h  vector_field.h
include/cuda/sh/: choose.h  clebsch_gordan.h  convert.h  cush.h  factorial.h  launch.h  legendre.h  sign.h  spherical_harmonics.h  wigner.h
include/graphics/: color_convert.hpp  fdm_factory.hpp  fom_factory.hpp  sampling.h  sampling.hpp  vector_field.hpp
include/graphics/color_mappers/: hsl.hpp  hsv.hpp  rgb.hpp
include/graphics/opengl/: all.hpp  buffer.hpp  framebuffer.hpp  opengl.hpp  program.hpp  shader.hpp  texture.hpp  vertex_array.hpp
include/io/: hdf5_io.hpp  hdf5_io_2.hpp  hdf5_io_base.hpp  hdf5_io_selector.hpp
include/math/: camera.hpp  linear_math.hpp  transform.hpp
include/opengl/: all.hpp  opengl.hpp  program.hpp  shader.hpp  texture.hpp  vertex_array.hpp
include/pli_vis/aspects/: loggable.hpp  renderable.hpp
include/pli_vis/cuda/: global_tractography.h  odf_field.h  polar_plot.h  sphere_tessellation.h  spherical_histogram.h  vector_field.h
include/pli_vis/io/: hdf5_io.hpp  hdf5_io_2.hpp  hdf5_io_base.hpp  io.hpp  io_common_impl.hpp  io_slice_impl.hpp  io_volume_impl.hpp
include/pli_vis/opengl/: buffer.hpp  framebuffer.hpp  opengl.hpp  program.hpp  shader.hpp  texture.hpp  vertex_array.hpp
include/pli_vis/ui/: application.hpp  plugin.hpp  plugin_base.hpp  window.hpp  window.ui
include/pli_vis/utility/: line_edit_utility.hpp  make_even.hpp
include/pli_vis/visualization/: basic_tracer.hpp  camera.hpp  odf_field.hpp  scalar_field.hpp  streamline_renderer.hpp  streamline_tracer.hpp  vector_field.hpp  volume_renderer.hpp
include/sh/: choose.h  clebsch_gordan.h  convert.h  cush.h  decorators.h  factorial.h  launch.h  legendre.h  sign.h  spherical_harmonics.h  vector_ops.h  wigner.h
include/sinks/: qt_text_browser_sink.hpp
include/ui/: overview_image.hpp  range_slider.hpp  selector.hpp  selector.ui  span_slider.hpp  viewer.hpp  wait_spinner.hpp  window.hpp  window.ui
include/ui/plugins/: data_plugin.hpp  data_toolbox.ui  fdm_plugin.hpp  fdm_toolbox.ui  fom_plugin.hpp  fom_toolbox.ui  interactor_plugin.hpp  interactor_toolbox.ui  plugin.hpp  retardation_plugin.hpp  retardation_toolbox.ui  scalar_plugin.hpp  scalar_toolbox.ui  selector_plugin.hpp  selector_toolbox.ui  tractography_plugin.hpp  tractography_toolbox.ui  volume_rendering_plugin.hpp  volume_rendering_toolbox.ui
include/ui/toolboxes/: data_toolbox.ui  data_toolbox_widget.hpp  fdm_toolbox.ui  fdm_toolbox_widget.hpp  fom_toolbox.ui  fom_toolbox_widget.hpp
include/ui/widgets/: picker.hpp  transfer_function_widget.hpp
include/utility/: qt_text_browser_sink.hpp  thread_pool.hpp
include/utility/qt/: line_edit_utility.hpp
include/utility/spdlog/: qt_text_browser_sink.hpp
include/utility/std/: base_type.hpp
include/utility/vtk/: fdm_factory.hpp  fom_factory.hpp
include/visualization/: basic_tracer.hpp  linear_tracer.hpp  odf_field.hpp  scalar_field.hpp  vector_field.hpp  volume_renderer.hpp
include/visualization/interactors/: first_person_interactor.hpp  interactor.hpp  orbit_interactor.hpp  simple_interactor.hpp
include/visualization/tangent/: analytic_orbit_interpolator.hpp  base_operations.hpp  basic_trilinear_interpolator.hpp  cartesian_grid.hpp  cartesian_locator.hpp  runge_kutta_4_integrator.hpp  simple_tracer.hpp  trace_recorder.hpp
proto/: camera.proto  color_mapping.proto  dataset_format.proto  image.proto  parameters.proto  selection.proto  vector_types.proto
shaders/: depth_pass.frag.glsl  depth_pass.vert.glsl  fullscreen_texture.frag.glsl  fullscreen_texture.vert.glsl  lineao_color_pass.frag.glsl  lineao_color_pass.vert.glsl  lineao_main_pass.frag.glsl  lineao_main_pass.vert.glsl  lineao_normal_depth_pass.frag.glsl  lineao_normal_depth_pass.vert.glsl  lineao_zoom_pass.frag.glsl  lineao_zoom_pass.vert.glsl  odf_field.frag.glsl  odf_field.vert.glsl  odf_field_renderer.frag.glsl  odf_field_renderer.vert.glsl  polar_plot.frag.glsl  polar_plot.vert.glsl  scalar_field.frag.glsl  scalar_field.vert.glsl  simple_color.frag.glsl  simple_color.vert.glsl  simple_color_texture.frag.glsl  simple_color_texture.vert.glsl  simple_texture.frag.glsl  simple_texture.vert.glsl  streamline_renderer.frag.glsl  streamline_renderer.vert.glsl  vector_field.frag.glsl  vector_field.vert.glsl  view_dependent.frag.glsl  view_dependent.geom.glsl  view_dependent.vert.glsl  view_dependent_vector_field.frag.glsl  view_dependent_vector_field.geom.glsl  view_dependent_vector_field.vert.glsl  volume_renderer.frag.glsl  volume_renderer.vert.glsl  volume_renderer_prepass.frag.glsl  volume_renderer_prepass.vert.glsl  (+3 more)
source/: main.cpp  viewer.cpp  window.cpp
source/cuda/: odf_field.cu  polar_plot.cu  sample.cu  sampler.cu  vector_field.cu
source/cuda/pt/: tracer.cu
source/cuda/zernike/: launch.cu
source/graphics/: sampling.cpp  vector_field.cpp
source/math/: camera.cpp  transform.cpp
source/ui/: application.cpp  overview_image.cpp  plugin.cpp  range_slider.cpp  selection_square.cpp  selector.cpp  span_slider.cpp  viewer.cpp  wait_spinner.cpp  window.cpp
source/ui/plugins/: color_plugin.cpp  data_plugin.cpp  demo_plugin.cpp  fdm_plugin.cpp  fom_plugin.cpp  global_tractography_plugin.cpp  interactor_plugin.cpp  odf_plugin.cpp  (+9 more)
source/visualization/: basic_tracer.cpp  camera.cpp  odf_field.cpp  scalar_field.cpp  streamline_renderer.cpp  streamline_tracer.cpp  transform.cpp  vector_field.cpp  volume_renderer.cpp
utility/: load_modules.sh  run.sh
(+131 files in other folders)
